--- a/NB.html
+++ b/NB.html
@@ -8,25 +8,26 @@
     <link rel="stylesheet" href="Style\nb.css">
 </head>
 <body>
-   <nav class="hor">
-<ul class="o1">
-    <li ><a href="#home">Home</a></li>
-    <li ><a href="#About">About</a></li>
-    <li ><a href="#Products">Products</a>
-      <ul> <li ><a href="#Engineering">Engineering</a></li>
-      <li ><a href="#Telecom">Telecom</a></li>
-      <li ><a href="#Energy">Energy</a></li>
-    <li ><a href="#Finance">Finance</a></li>
-    <li><a href="#Finance">Consultancy</a></li>
-
-    
+ <div class="ver">
+  <nav>
+    <ul id="ver">
+      <il>Home </il>
+      <il>About</il>
+      <il id="ie">Products</il>
+      <il>Services</il>
+      <il>Contact</il>
     </ul>
     
-    <li ><a href="#Services">Services</a></li>
-    <li ><a href="#Contact">Contact</a></li>
+  </nav>
+ </div>
+  <div class="hor">
+    <ul id="hor">
+    <il>Engineering</il>
+    <il>Telecom</il>
+    <il>Energy</il>
+    <il>Finance</il>
+    <il>Consultancy</il>
   </ul>
-   </nav> 
-  
-  
+  </div>
 </body>
 </html>
